# feed-manager-for-misp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING_DCO.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-to-test-pypi.yml
src/feed_manager/: __init__.py  consumer.py  generator.py  storage.py  translator.py
tests/: test_consumer.py  test_generator.py  test_storage.py  test_translator.py
