[metadata]
name = misp-feed-manager
version = 0.3.1
author = Stefano Ortolani
description = Set of utilities to manage MISP feeds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vmware-labs/feed-manager-for-misp/
project_urls =
    Bug Tracker = https://github.com/vmware-labs/feed-manager-for-misp/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    google-cloud-storage
    requests
scripts =
    bin/consume_feed.py
    bin/generate_feed.py

[options.extras_require]
misp = pymisp

[options.packages.find]
where = src
